# Project_tracker

./: .gitignore
project-tracker/: pyproject.toml  pytest.ini
project-tracker-frontend/: index.html  package-lock.json  package.json  vite.config.mjs
project-tracker-frontend/public/: index.html
project-tracker-frontend/src/: App.jsx  index.css  main.jsx
project-tracker-frontend/src/components/: CommentModal.jsx  PrivateRoute.jsx  ProjectForm.jsx  TaskItem.jsx
project-tracker-frontend/src/pages/: LoginPage.jsx  ProjectPage.jsx  ProjectsPage.jsx  RegisterPage.jsx
project-tracker-frontend/src/services/: api.js
project-tracker/alembic/: env.py
project-tracker/app/: __init__.py  main.py
project-tracker/app/api/: auth.py
project-tracker/app/core/: security.py
project-tracker/app/crud/: task.py  user.py
project-tracker/app/db/: models.py
project-tracker/app/schemas/: task.py
project-tracker/app/utils/: dependencies.py
project-tracker/tests/: conftest.py  test_auth.py  utils.py
